; ModuleID = '/home/carl/AnghaBench/linux/tools/objtool/extr_check.c_call_dest_name.c'
source_filename = "/home/carl/AnghaBench/linux/tools/objtool/extr_check.c_call_dest_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.instruction = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8* }

@.str = private unnamed_addr constant [10 x i8] c"{dynamic}\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.instruction*)* @call_dest_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @call_dest_name(%struct.instruction* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.instruction*, align 8
  store %struct.instruction* %0, %struct.instruction** %3, align 8
  %4 = load %struct.instruction*, %struct.instruction** %3, align 8
  %5 = getelementptr inbounds %struct.instruction, %struct.instruction* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.instruction*, %struct.instruction** %3, align 8
  %10 = getelementptr inbounds %struct.instruction, %struct.instruction* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %2, align 8
  br label %15

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %15

15:                                               ; preds = %14, %8
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
